Bug #558197 DUT can still register ims sucessfully after selecting primary card, even the volte switch has been turned off.
[root cause  ] AP send AT+CAVIMS by the primary card only when volte switch turned on/off. After selecting primary card, CP response ^CONN to notify AP to register ims.
[changes     ] Both sims will send at command when turning on/off volte switch.
[side effects] no
[self test   ] <board, Test cases summary>:sp9860g_1h10,
1. Insert sim1 and start device, then turn on/off volte switch, ims state is right;
2. Insert sim2 and start device, then turn on/off volte switch, ims state is right;
3. Insert both sims and start device, then turn on/off volte switch, ims state is right;
4. Insert both sims and start device, then turn offf volte switch and select primary card again, ims will deregistered.

[reviewers   ] kun.tang,zhiwei.fu,lei.huang
[change_type ] feature_bugfix#503124
[tag_product ] common

Change-Id: Ifb28d8f4bc6f32df4db8fc387e8bfa3c181b4fb6
(cherry picked from commit ee479ceb961cff3d0bcb3aed5f4147692a019c60)